# rediff

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cursor/: Cargo.toml
crates/cursor/src/: cursor.rs  goal.rs  lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: diff.rs  editor.rs  lib.rs
crates/playground/: Cargo.toml
crates/playground/src/: main.rs  workspace.rs
crates/rediff/: Cargo.toml
crates/rediff/src/: config.rs  diff_editor.rs  lib.rs  line_cache.rs  line_element.rs  main.rs
crates/text/: Cargo.toml
crates/text/src/: buffer.rs  lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: diff_editor_view.rs  lib.rs  line_element.rs
src/: main.rs
src/core/: buffer.rs  cursor.rs  editor.rs  mod.rs
src/ui/: app.rs  diff_editor_view.rs  mod.rs
