[workspace]
resolver = "3"
members = [
    "crates/text",
    "crates/cursor",
    "crates/editor",
    "crates/rediff",
    "crates/playground",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
gpui = { version = "*" }
ropey = "1.6"
similar = "2.7.0"

# Internal crates
text = { path = "crates/text" }
cursor = { path = "crates/cursor" }
editor = { path = "crates/editor" }
rediff = { path = "crates/rediff" }
